[tool.poetry]
name = "nutcracker"
version = "0.3.141591"
description = "Tools for editing resources in SCUMM games."
authors = ["BLooperZ <blooperz@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
keywords = ["scumm", "sputm", "smush", "lucasarts", "humongous"]
repository = "https://github.com/blooperz/nutcracker"

[tool.poetry.dependencies]
python = ">=3.12"
numpy = "^2.0.0"
parse = "^1.20.1"
Pillow = "^10.2.0.20240520"
typer = "^0.12.3"
PyYAML = "^6.0.1"
deal = "^4.24.4"

[tool.poetry.scripts]
nutcracker = "nutcracker.runner:app"
smush = "nutcracker.smush.runner:app"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.9"
pytest = "^8.1.1"
pyinstaller = { version = "^6.13.0", python = "<3.14" }
pip-licenses = "^5.0.0"
types-pillow = "^10.2.0.20240520"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
plugins = ['numpy.typing.mypy_plugin']

[tool.ruff] # https://beta.ruff.rs/docs/settings/
target-version = "py310"
line-length = 88
fix = false
src = ["src", "tests"]

[tool.ruff.lint]

select = [ # https://beta.ruff.rs/docs/rules/
  "BLE", # flake8-blind-except
  "FBT", # flake8-boolean-trap
  "A", # flake8-builtins
  "COM", # flake8-commas
  "DTZ", # flake8-datetimez
  "T10", # flake8-debugger
  # "DJ", # flake8-django
  # "EM", # flake8-errmsg
  "EXE", # flake8-executable
  "ISC", # flake8-implicit-str-concat
  "ICN", # flake8-import-conventions
  "G", # flake8-logging-format
  "INP", # flake8-no-pep420
  "PIE", # flake8-pie
  "T20", # flake8-print
  "PYI", # flake8-pyi
  "RSE", # flake8-raise
  "RET", # flake8-return
  "SLF", # flake8-self
  "ARG", # flake8-unused-arguments
  "PTH", # flake8-use-pathlib
  "ERA", # eradicate
  # "PD", # pandas-vet
  "PGH", # pygrep-hooks
  "PL", # Pylint
  "PLC", # Convention
  "PLE", # Error
  "PLR", # Refactor
  "PLW", # Warning
  "TRY", # tryceratops
  "NPY", # NumPy-specific rules
  "ANN", # flake8-annotations
  "YTT", # flake8-2020
  "C90", # mccabe
  "E", # pycodestyle
  "W", # pycodestyle
  "F", # Pyflakes
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "D", # pydocstyle
  "I", # isort
  "N", # pep8-naming
  "S", # flake8-bandit
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  "Q", # flake8-quotes
  "UP", # pyupgrade
  "PT", # flake8-pytest-style
  "RUF", # Ruff-specific rules
]

fixable = ["I", "COM"]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]

ignore = [
  "RET504", # Allow assigning before return to ease debugging
  "S101", # Allow using assert
  "UP015", # Prefer explicitly configuring open mode
  "ANN101", "ANN102", # Do not require annotating self and cls
  "PTH103", # `os.mkdirs` is more readable
  "D107", # No need to docstring `__init__` method
  "D202", # No blank lines allowed after function docstring -> clashes with Black
  "ARG001", "ARG002", # Unused arguments are generally used for API compatibility
  "D", # TODO: Add docstrings
  "COM812", "ISC001", # conflicts with formatter
  "BLE001", # Expecting `Exception` is totally fine
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.ruff.lint.flake8-boolean-trap]
extend-allowed-calls = ["typer.Option"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/**/*.py" = ["D100"]

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = "single"
